--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     0
                 </div>
             </header>
-            <section class="container">
+            <section id="buttons" class="container">
                 <div class="row">
                     <button id="%" type="button" class="btn btn-others col-sm">%</button>
                     <button id="r4" type="button" class="btn btn-others col-sm">√</button>
@@ -86,8 +86,8 @@
                 <div class="row">
                     <button id="ce" type="button" class="btn btn-others col-sm">CE</button>
                     <button id="c" type="button" class="btn btn-others col-sm">C</button>
-                    <button id="+-" type="button" class="btn btn-others col-sm">←</button>
-                    <button id="/" type="button" class="btn btn-others col-sm">÷</button>
+                    <button id="←" type="button" class="btn btn-others col-sm">←</button>
+                    <button id="%" type="button" class="btn btn-others col-sm">÷</button>
                 </div>
                 <div class="row">
                     <button id="7" type="button" class="btn btn-number col-sm">7</button>
@@ -108,10 +108,10 @@
                     <button id="+" type="button" class="btn btn-others col-sm">+</button>
                 </div>
                 <div class="row">
-                    <button id="" type="button" class="btn btn-others col-sm">±</button>
-                    <button id="" type="button" class="btn btn-number col-sm">0</button>
-                    <button id="" type="button" class="btn btn-others col-sm">,</button>
-                    <button id="" type="button" class="btn btn-others col-sm">=</button>
+                    <button id="+-" type="button" class="btn btn-others col-sm">±</button>
+                    <button id="0" type="button" class="btn btn-number col-sm">0</button>
+                    <button id="," type="button" class="btn btn-others col-sm">,</button>
+                    <button id="=" type="button" class="btn btn-others col-sm">=</button>
                 </div>
             </section>
         </div>
