--- a/index.html
+++ b/index.html
@@ -78,40 +78,40 @@
             </header>
             <section id="buttons" class="container">
                 <div class="row">
-                    <button id="%" type="button" class="btn btn-others col-sm">%</button>
-                    <button id="r4" type="button" class="btn btn-others col-sm">√</button>
-                    <button id="h2" type="button" class="btn btn-others col-sm">x²</button>
-                    <button id="middle" type="button" class="btn btn-others col-sm">¹/x</button>
+                    <button type="button" class="btn btn-others col-sm">%</button>
+                    <button type="button" class="btn btn-others col-sm">√</button>
+                    <button type="button" class="btn btn-others col-sm">x²</button>
+                    <button type="button" class="btn btn-others col-sm">¹/x</button>
                 </div>
                 <div class="row">
-                    <button id="ce" type="button" class="btn btn-others col-sm">CE</button>
-                    <button id="c" type="button" class="btn btn-others col-sm">C</button>
-                    <button id="←" type="button" class="btn btn-others col-sm">←</button>
-                    <button id="%" type="button" class="btn btn-others col-sm">÷</button>
+                    <button type="button" class="btn btn-others col-sm">CE</button>
+                    <button type="button" class="btn btn-others col-sm">C</button>
+                    <button type="button" class="btn btn-others col-sm">←</button>
+                    <button type="button" class="btn btn-others col-sm">÷</button>
                 </div>
                 <div class="row">
-                    <button id="7" type="button" class="btn btn-number col-sm">7</button>
-                    <button id="8" type="button" class="btn btn-number col-sm">8</button>
-                    <button id="9" type="button" class="btn btn-number col-sm">9</button>
-                    <button id="*" type="button" class="btn btn-others col-sm">X</button>
+                    <button type="button" class="btn btn-number col-sm">7</button>
+                    <button type="button" class="btn btn-number col-sm">8</button>
+                    <button type="button" class="btn btn-number col-sm">9</button>
+                    <button type="button" class="btn btn-others col-sm">x</button>
                 </div>
                 <div class="row">
-                    <button id="4" type="button" class="btn btn-number col-sm">4</button>
-                    <button id="5" type="button" class="btn btn-number col-sm">5</button>
-                    <button id="6" type="button" class="btn btn-number col-sm">6</button>
-                    <button id="-" type="button" class="btn btn-others col-sm">-</button>
+                    <button type="button" class="btn btn-number col-sm">4</button>
+                    <button type="button" class="btn btn-number col-sm">5</button>
+                    <button type="button" class="btn btn-number col-sm">6</button>
+                    <button type="button" class="btn btn-others col-sm">-</button>
                 </div>
                 <div class="row">
-                    <button id="1" type="button" class="btn btn-number col-sm">1</button>
-                    <button id="2" type="button" class="btn btn-number col-sm">2</button>
-                    <button id="3" type="button" class="btn btn-number col-sm">3</button>
-                    <button id="+" type="button" class="btn btn-others col-sm">+</button>
+                    <button type="button" class="btn btn-number col-sm">1</button>
+                    <button type="button" class="btn btn-number col-sm">2</button>
+                    <button type="button" class="btn btn-number col-sm">3</button>
+                    <button type="button" class="btn btn-others col-sm">+</button>
                 </div>
                 <div class="row">
-                    <button id="+-" type="button" class="btn btn-others col-sm">±</button>
-                    <button id="0" type="button" class="btn btn-number col-sm">0</button>
-                    <button id="," type="button" class="btn btn-others col-sm">,</button>
-                    <button id="=" type="button" class="btn btn-others col-sm">=</button>
+                    <button type="button" class="btn btn-others col-sm">±</button>
+                    <button type="button" class="btn btn-number col-sm">0</button>
+                    <button type="button" class="btn btn-others col-sm">,</button>
+                    <button type="button" class="btn btn-others col-sm">=</button>
                 </div>
             </section>
         </div>
